--- a/Oblig2/Python Code/data_visualization.ipynb
+++ b/Oblig2/Python Code/data_visualization.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2720,10 +2720,10 @@
     "    data_frame = file_df,\n",
     "    x=\"createAt\",\n",
     "    y=\"temperature\",\n",
-    "    title='Oystein\\'s recorded room temperatures',\n",
+    "    title=\"Oystein\\'s recorded room temperatures\",\n",
     "    height=600,\n",
     "    labels=dict(\n",
-    "        createAt=\"Time (minutes)\",\n",
+    "        createAt=\"Time (Minutes)\",\n",
     "        temperature=\"Temperature (°C)\"\n",
     "        )          \n",
     "    )\n",
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -5948,6 +5948,22 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "Time (Minutes)",
+          "x": 0.47,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0,
+          "yanchor": "top",
+          "yref": "paper",
+          "yshift": -30
+         }
+        ],
         "height": 600,
         "template": {
          "data": {
@@ -6765,6 +6781,12 @@
           }
          }
         },
+        "title": {
+         "font": {
+          "size": 30
+         },
+         "text": "Oystein's recorded room temperatures"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -6796,19 +6818,25 @@
     "plot_on_off = go.Scatter(\n",
     "    x=file_df[\"createAt\"],\n",
     "    y=file_df[\"ON/OFF\"],\n",
-    "    name=\"On/Off\"\n",
+    "    name=\"On/Off\",\n",
     ")\n",
     "\n",
     "plot_temp = go.Scatter(\n",
     "    x=file_df[\"createAt\"],\n",
     "    y=file_df[\"temperature\"],\n",
-    "    name=\"Temperature (°C)\"\n",
+    "    name=\"Temperature (°C)\",\n",
     ")\n",
     "\n",
-    "fig = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "fig = make_subplots(specs=[[{\"secondary_y\": True}]],x_title=\"Time (Minutes)\")\n",
     "fig.add_trace(plot_temp, secondary_y=False,)\n",
-    "fig.add_trace(plot_on_off,secondary_y=True)\n",
-    "fig['layout'].update(height = 600)\n",
+    "fig.add_trace(plot_on_off,secondary_y=True,)\n",
+    "fig.update_layout(\n",
+    "    height = 600,\n",
+    "    width = 800,\n",
+    "    title_text=\"Oystein\\'s recorded room temperatures\",\n",
+    "    title_font_size=30,\n",
+    ")\n",
+    "\n",
     "fig.show()\n"
    ]
   },
